--- a/traductor/templates/registrarse.html
+++ b/traductor/templates/registrarse.html
@@ -80,7 +80,7 @@
 
     {{ error }}
 
-    <form action="/signup/" method="POST" class="login-form">
+    <form action="/registrarse/" method="POST" class="login-form">
       {% csrf_token %}
       <div class="form-group">
         {{ form.label_tag }}
