--- a/traductor/templates/tarea.html
+++ b/traductor/templates/tarea.html
@@ -188,7 +188,8 @@
                         </select>
                     </div>
                     <div class="col-md-6">
-                        <input type="text" id="txtTexto" class="form-control" placeholder="Ingrese una palabra o expresión" minlength="1" required />
+                        <input type="text" id="txtTexto" class="form-control" placeholder="Ingrese una palabra o expresión" minlength="1" required oninput="validarCampoTexto()" />
+
                     </div>
                     <div class="col-md-3">
                         <div class="d-grid">
@@ -262,9 +263,16 @@
     // Verifica si hay una configuración almacenada en localStorage
     const modoOscuroActivado = localStorage.getItem('modoOscuro') === 'activado';
 
+    // Paleta de colores para el modo oscuro
+    const coloresModoOscuro = {
+        backgroundColor: '#333',  // Cambia el color de fondo a un tono oscuro
+        color: '#fff',  // Cambia el color del texto a blanco
+        headerBackgroundColor: '#444',  // Cambia el color de fondo del encabezado a un tono más oscuro
+    };
+
     // Aplica el modo oscuro si estaba activado
     if (modoOscuroActivado) {
-        cuerpoDocumento.classList.add('modo-oscuro');
+        aplicarEstilosModoOscuro();
     }
 
     // Escucha el evento de clic en el botón
@@ -272,11 +280,36 @@
         // Alterna la clase modo-oscuro en el cuerpo del documento
         cuerpoDocumento.classList.toggle('modo-oscuro');
 
+        // Aplica o elimina los estilos del modo oscuro
+        if (cuerpoDocumento.classList.contains('modo-oscuro')) {
+            aplicarEstilosModoOscuro();
+        } else {
+            eliminarEstilosModoOscuro();
+        }
+
         // Guarda la configuración en localStorage
         const modoOscuroNuevo = cuerpoDocumento.classList.contains('modo-oscuro') ? 'activado' : 'desactivado';
         localStorage.setItem('modoOscuro', modoOscuroNuevo);
     });
+
+    // Función para aplicar los estilos del modo oscuro
+    function aplicarEstilosModoOscuro() {
+        cuerpoDocumento.style.backgroundColor = coloresModoOscuro.backgroundColor;
+        cuerpoDocumento.style.color = coloresModoOscuro.color;
+        // Puedes agregar más estilos según sea necesario
+        // Por ejemplo, cambiar el color de fondo del encabezado
+        document.querySelector('header').style.backgroundColor = coloresModoOscuro.headerBackgroundColor;
+    }
+
+    // Función para eliminar los estilos del modo oscuro
+    function eliminarEstilosModoOscuro() {
+        cuerpoDocumento.style.backgroundColor = '';  // Utiliza el valor por defecto
+        cuerpoDocumento.style.color = '';  // Utiliza el valor por defecto
+        // Elimina otros estilos según sea necesario
+        document.querySelector('header').style.backgroundColor = '';  // Utiliza el valor por defecto
+    }
 </script>
+
 
 
 {% endblock %}
