Mensaje descriptivo aquí

--- a/traductor/templates/index.html
+++ b/traductor/templates/index.html
@@ -118,7 +118,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h3 class="card-title"><i class="fas fa-language"></i> Traducción de Textos</h3>
-                    <p class="card-text">Accede a servicios de traducción español-inglés para tus textos utilizando Django Traducciones y escucha la pronunciación en ambos idiomas.</p>
+                    <p class="card-text">Accede a servicios de traducción español-inglés para tus textos utilizando Django Traduccio</p>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h3 class="card-title"><i class="fas fa-clock"></i> Flexibilidad y Aprendizaje a Tu Ritmo</h3>
-                    <p class="card-text"> Disfruta de una experiencia de traducción adaptada a tu estilo con Django Traducciones, donde la flexibilidad se traduce en libertad para explorar y aprender a tu propio ritmo.</p>
+                    <p class="card-text"> Disfruta de una experiencia de traducción, donde la flexibilidad se traduce en libertad para explorar y aprender a tu propio ritmo.</p>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h3 class="card-title"><i class="fas fa-headset"></i> Soporte 24/7</h3>
-                    <p class="card-text">Nuestro equipo de soporte está disponible en todo momento para resolver tus consultas y proporcionar ayuda en la pronunciación.</p>
+                    <p class="card-text">Nuestro equipo de soporte está disponible en todo momento para resolver tus consultas</p>
                 </div>
             </div>
         </div>
