--- a/traductor/templates/iniciar_sesion.html
+++ b/traductor/templates/iniciar_sesion.html
@@ -4,31 +4,32 @@
 <style>
     /* Estilos para el contenedor principal */
     .login-container {
-        max-width: 400px;
-        margin: 50px auto;
+        border: 2px solid #01692cef;
+        border-radius: 5px;
+        box-shadow: 0px 2px 5px rgba(3, 116, 3, 0.651);
+        max-width: 500px;
+        margin: 0 auto;
         padding: 20px;
-        border: 2px solid #ddd;
-        border-radius: 10px;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-        background-color: #f8f9fa;
+        text-align: center;
+        margin-top: 50px;
     }
 
     /* Estilos para el encabezado */
     .login-header {
-        background-color: #007BFF;
+        background-color: #c3cbd4;
         color: white;
         padding: 15px;
-        border-radius: 10px 10px 0 0;
-        text-align: center;
+        border-radius: 5px 5px 0 0;
     }
 
-    .login-header h1 {
+    .login-header h2 {
         margin: 0;
     }
 
     /* Estilos para el formulario */
     .login-form {
-        margin-top: 20px;
+        padding: 20px;
+        text-align: left;
     }
 
     /* Estilos para los campos de formulario */
@@ -37,40 +38,55 @@
     }
 
     .form-group label {
-        display: block;
         font-weight: bold;
-        margin-bottom: 5px;
-        color: #007BFF;
     }
 
     .form-control {
-        width: 100%;
-        padding: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
+        padding: 10px;
+        width: 100%;
         font-size: 14px;
+        background-color: rgba(241, 248, 239, 0.267);
         transition: border-color 0.3s ease;
     }
 
-    .form-control:focus {
+    .form-control:focus,
+    .content:focus-within .form-control {
         outline: none;
-        border-color: #007BFF;
+        border-color: green;
+        box-shadow: 0px 2px 10px rgba(1, 150, 1, 0.712);
     }
 
     /* Estilos para el botón */
     .btn-primary {
-        background-color: #007BFF;
+        background-color: #018203;
         border: none;
         width: 100%;
         padding: 10px;
         color: #ffffff;
         font-size: 16px;
         border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         transition: background-color 0.3s ease;
     }
 
     .btn-primary:hover {
-        background-color: #0056b3;
+        background-color: #CC9F2D;
+    }
+
+    /* Estilos para otros elementos y enlaces */
+    .mt-3 {
+        margin-top: 20px;
+    }
+
+    a {
+        color: #007BFF;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #0056b3;
     }
 </style>
 
